...
            VStack(spacing: 0) {
                Text("Я в ШОКе")
                    .font(.system(size: 32, weight: .bold))
                    .foregroundColor(.black)
                    .padding(.top, 60)
                    .padding(.bottom, 40)
                    .accessibilityIdentifier("mainTitle")
                
                VStack(spacing: 20) {
                    emailTextField
                    
                    if let emailExists = emailExists {
                        if emailExists {
...
